--- a/src/components/basic-layout/home.less
+++ b/src/components/basic-layout/home.less
@@ -4,14 +4,24 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  white-space: nowrap;
   img{
     width: 40px;
     height: 40px;
-    margin-right: 10px;
   }
   span{
+    padding-left: 10px;
     font-size: 20px;
     color: aliceblue;
     margin: 0;
+  }
+}
+
+
+
+
+.ant-layout-content{
+  > div{
+    margin-top: 80px;
   }
 }
